--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://rsms.me/inter/inter.css" rel="stylesheet" />
-    <title>Vite App</title>
+    <title>Proto MS</title>
   </head>
   <body>
     <div id="root"></div>
